<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_into_account"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/splash_image"
                android:layout_gravity="center_horizontal"/>


            <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableStart="@drawable/name"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:background="@drawable/editext_background"
                android:drawablePadding="10dp"
                android:padding="10dp"
                />

            <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableStart="@drawable/email"
                android:hint="@string/email"
                android:inputType="textPassword"
                android:background="@drawable/editext_background"
                android:drawablePadding="10dp"
                android:padding="10dp"
                />

            <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableStart="@drawable/password"
                android:hint="@string/password"
                android:background="@drawable/editext_background"
                android:drawablePadding="10dp"
                android:padding="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:textColor="@color/white"/>
        </LinearLayout>

    </RelativeLayout>
</layout>

<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    >-->

<!--    <TextView-->
<!--        android:id="@+id/logintoaccount"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="8dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:text="Log into account"-->
<!--        android:textSize="25sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/FullName"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="8dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:text="Name"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/EmailAddress"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/logintoaccount" />-->

<!--    <EditText-->
<!--        android:id="@+id/EmailAddress"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="8dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textEmailAddress"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/Password"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/FullName" />-->

<!--    <EditText-->
<!--        android:id="@+id/Password"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="8dp"-->
<!--        android:layout_marginTop="84dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPassword"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/Continue"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />-->

<!--    <Button-->
<!--        android:id="@+id/Continue"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="continue"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/Password" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

